@startuml

title __PERSON's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.Person {
          - address : String
          - birthdate : Date
          - firstname : String
          - lastname : String
          - password : String
          - pid : int
          - role : String
          - sex : String
          - username : String
          + Person()
          + Person()
          + getAddress()
          + getBirthdate()
          + getFirstname()
          + getLastname()
          + getPassword()
          + getPid()
          + getRole()
          + getSex()
          + getUsername()
          + setAddress()
          + setBirthdate()
          + setFirstname()
          + setLastname()
          + setPassword()
          + setPid()
          + setRole()
          + setSex()
          + setUsername()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonController {
          {static} - CONTENT_TYPE_HEADER : String
          {static} - JSON_MEDIA_TYPE : String
          {static} - logger : Logger
          - objectMapper : ObjectMapper
          + doGet()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonDTO {
          - firstname : String
          - lastname : String
          - pid : int
          + PersonDTO()
          + PersonDTO()
          + getFirstname()
          + getLastname()
          + getPid()
          + setFirstname()
          + setLastname()
          + setPid()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonRepository {
          {static} - FIND_QUERY_PID : String
          {static} - FIND_QUERY_USERNAME : String
          - connection : Connection
          {static} - logger : Logger
          + PersonRepository()
          + findPid()
          + findUsername()
          - getPerson()
      }
    }
  }
  

  ch.bfh.ti.academia.person.PersonController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.person.PersonController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
